# playground

./: .gitignore  README_zh.md
bus/: bus.v
cmake/: CMakeLists.txt  README.md
cmake/src/: main.cpp
sdl3-sound/: .gitignore  CMakeLists.txt
sdl3-sound/src/: config.h  envelope.cpp  envelope.h  main.cpp  music.cpp  music.h  oscillator.cpp  oscillator.h  synthesizer.cpp  synthesizer.h  voice.cpp  voice.h  waveformer.c
